[Fix] screen-animate.js The first view was not visible when moving to the top page, so the position value was changed to “fixed".

--- a/assets/src/css/08_Components/_screen-animate.pcss
+++ b/assets/src/css/08_Components/_screen-animate.pcss
@@ -8,12 +8,16 @@ body[data-animate-effect='true'] .SiteWrapper {
     transition: opacity 0.3s ease-out;
 }
 
+.c-ScreenAnimate_Container {
+    position: relative;
+}
+
 .c-ScreenAnimate_Layer {
     display: block;
     height: 100vh;
     left: 0;
     overflow-x: hidden;
-    position: absolute;
+    position: fixed;
     top: 0;
     width: 100%;
 }
